--- a/src/app/activities/activities.component.scss
+++ b/src/app/activities/activities.component.scss
@@ -91,6 +91,23 @@ h1 {
   transition: 0.4s;
 }
 
+.add-project {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 200px;
+  margin-left: 20px;
+  background-color: #7048EC;
+  font-weight: bold;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
 .filter-icon {
   margin-left: 10px;
 }
@@ -119,4 +136,28 @@ h1 {
   margin-top: 20px;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+
+.mat-form-field-appearance-fill {
+  background-color: white;
+}
+
+.mat-form-field-wrapper {
+  // border-radius: 4px 4px 0 0;
+  // padding: 0.75em 0.75em 0 0.75em;
+  background-color: blue;
+}
+
+.mat-form-field-appearance-fill .mat-form-field-infix {
+  background-color: yellow;
+}
+
+::ng-deep.mat-dialog-container {
+  font-family: pro-medium !important;
+  height: 50vh !important;
+  padding: 20px !important;
+  background-color: white !important;
+  border-radius: 15px !important;
+  box-shadow: none !important;
+  position: relative !important;
 }
