--- a/src/app/activities/projectform/projectform/projectform.component.html
+++ b/src/app/activities/projectform/projectform/projectform.component.html
@@ -1,48 +1,39 @@
-    
-<alert></alert>
-<mat-card>
-  <form class="ProjectRegForm" [formGroup] = "registrationForm" (ngSubmit)="onSubmit()">
-    <mat-card-header>
-        <mat-card-title>Project Registration Form</mat-card-title>
-        <mat-card-subtitle>Register a new Project with this form</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-       
-    
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Project Name</mat-label>
-        <input matInput formControlName = "name" >
-        <mat-error *ngIf="registrationForm.get('name').hasError('required')"> Project Name is required </mat-error>
-      </mat-form-field>
+<h1 style="margin-bottom: 20px;">Projects<span style="font-size: medium; font-weight: normal; color: grey;"> /
+    registration form</span></h1>
+<form class="ProjectRegForm" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+  <p style="font-size: small; font-weight: normal; color: grey;">Please fill this form to register a project.</p>
+  <mat-card-content>
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>Project Name</mat-label>
+      <input matInput formControlName="name">
+      <mat-error *ngIf="registrationForm.get('name').hasError('required')"> Project Name is required </mat-error>
+    </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Project Description</mat-label>
-        <textarea matInput formControlName = "description"></textarea>
-        <mat-error *ngIf="registrationForm.get('description').hasError('required')"> Description is required </mat-error>
-        <!-- <mat-icon matSuffix>short_text</mat-icon> -->
-      </mat-form-field>
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>Project Description</mat-label>
+      <textarea matInput formControlName="description"></textarea>
+      <mat-error *ngIf="registrationForm.get('description').hasError('required')"> Description is required
+      </mat-error>
+      <!-- <mat-icon matSuffix>short_text</mat-icon> -->
+    </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Choose project start date</mat-label>
-        <input matInput [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose project start date</mat-label>
+      <input matInput [matDatepicker]="picker">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Choose project End date</mat-label>
-        <input matInput [matDatepicker]="epicker">
-        <mat-datepicker-toggle matSuffix [for]="epicker"></mat-datepicker-toggle>
-        <mat-datepicker #epicker></mat-datepicker>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Choose project End date</mat-label>
+      <input matInput [matDatepicker]="epicker">
+      <mat-datepicker-toggle matSuffix [for]="epicker"></mat-datepicker-toggle>
+      <mat-datepicker #epicker></mat-datepicker>
+    </mat-form-field>
 
-   
-      
-      
-      </mat-card-content>
-      <mat-card-actions align="start">
-          <button [disabled]="registrationForm.invalid" type="submit" mat-button color="primary">Submit</button>
-          <button mat-button colour="accent">Cancel</button>  
-      </mat-card-actions>
-    </form>      
-</mat-card>
+  </mat-card-content>
+  <mat-card-actions align="start">
+    <button [disabled]="registrationForm.invalid" type="submit" mat-button color="primary">Submit</button>
+    <button mat-button colour="accent">Cancel</button>
+  </mat-card-actions>
+</form>
