--- a/src/app/clubs/clubform/clubform.component.scss
+++ b/src/app/clubs/clubform/clubform.component.scss
@@ -6,7 +6,6 @@
   
   .fieldCss {
     width: 100%;
-    padding: 5px;
   }
   
   td {
@@ -15,4 +14,12 @@
 mat-card {
   padding: 10px;
   
+}
+
+h1 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: rgb(41, 40, 40);
 }
