--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,34 +1,26 @@
-<mat-toolbar>
-    <div>
-        <span>Club View</span>
-    </div>
-    <div >
-        <mat-form-field  appearance="outline" >  <!-- legacy and outline are other directives of appearance-->
-            <input matInput (keyup)="applyFilter($event)" placeholder="Search Club" #input>
-            <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
-    </div>
-    <Div>
-        
-        <button mat-icon-button [matMenuTriggerFor]="menu"  matTooltip="Filter clubs">
-            <mat-icon color="accent">filter_list</mat-icon>
-            
-        </button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu>
-        <button mat-button (click)="exporter.exportTable('xlsx')">
-          <mat-icon color="accent">download</mat-icon>
-        </button>
+<h1>Clubs</h1>
 
-        <button mat-icon-button matTooltip="Add new Club" (click)="registerClub()">
-            <mat-icon color="accent">app_registration</mat-icon>  
-        </button>
-        
-    </Div>
-</mat-toolbar>
-<div class="mat-elevation-z8">
+<div class="clubs-search">
+  <mat-icon matSuffix class="search-icon">search</mat-icon>
+  <mat-form-field appearance="standard">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search clubs by name, description, date, zone or region" #input>
+  </mat-form-field>
+  <!-- <div class="filters" (click)="openDialog()">
+    <div>Filter</div>
+    <mat-icon class="filter-icon" color="accent">filter_list</mat-icon>
+  </div> -->
+  <div class="download" (click)="exporter.exportTable('xlsx')">
+    <div>Download</div>
+    <mat-icon class="filter-icon" color="accent">download</mat-icon>
+  </div>
+  <div class="add-club" (click)="registerClub()">
+    <div>Add club</div>
+    <mat-icon class="filter-icon" color="white">add</mat-icon>
+  </div>
+</div>
+
+
+<div class="table">
     <table mat-table matTableExporter [dataSource]="dataSource" matSort class="table" #exporter="matTableExporter">
   
       <!-- ID Column -->
