--- a/src/app/members/memberform/memberform.component.html
+++ b/src/app/members/memberform/memberform.component.html
@@ -1,115 +1,117 @@
-<mat-card>
-  <form class="memberRegForm" [formGroup] = "registrationForm" (ngSubmit)="onSubmit()">
-    <mat-card-header>
-        <mat-card-title>Member Registration Form</mat-card-title>
-        <mat-card-subtitle>Register a new member with this form</mat-card-subtitle>
-    </mat-card-header>
-    
-    <mat-card-content>
-       
-    
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>First Name</mat-label>
-        <input matInput formControlName = "first_name" >
-        <mat-error *ngIf="registrationForm.get('first_name').hasError('required')"> Member Name is required </mat-error>
-      </mat-form-field>
+<h1 style="margin-bottom: 20px;">Members<span style="font-size: medium; font-weight: normal; color: grey;"> /
+    registration form</span></h1>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Middle Name</mat-label>
-        <input matInput formControlName = "middle_name">
-        <mat-error *ngIf="registrationForm.get('middle_name').hasError('required')"> Middle Name is required </mat-error>
-        <mat-icon matSuffix>local_hospital</mat-icon>
-      </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Last Name</mat-label>
-        <input matInput formControlName = "last_name">
-        <mat-error *ngIf="registrationForm.get('last_name').hasError('required')"> Last Name is required </mat-error>
-        <mat-icon matSuffix>local_hospital</mat-icon>
-      </mat-form-field>
+<form class="memberRegForm" [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+  <p style="font-size: small; font-weight: normal; color: grey;">Please fill this form to register a club.</p>
 
-      <mat-form-field appearance="fill" class="fieldCss">
-        <mat-label>Email</mat-label>
-        <input type="email" matInput  placeholder="pat@example.com" [formControl]= "registrationForm.get('email')" required>
-        <mat-error *ngIf="registrationForm.get('email').invalid">{{getErrorMessage()}}</mat-error>
-        <mat-icon matSuffix>email</mat-icon>
-      </mat-form-field>
+  <mat-card-content>
 
-      <mat-form-field appearance="fill" class="fieldCss">
-        <mat-label>Phone number</mat-label>
-        <input matInput type="tel" formControlName="tel" required>
-        <mat-icon matSuffix>phone</mat-icon>
-        <mat-error *ngIf="registrationForm.get('tel').hasError('required')"> Phone Number is required </mat-error>
-      </mat-form-field>
 
-      <!-- <mat-form-field class="fieldCss" appearance="fill">
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>First Name</mat-label>
+      <input matInput formControlName="first_name">
+      <mat-error *ngIf="registrationForm.get('first_name').hasError('required')"> Member Name is required </mat-error>
+    </mat-form-field>
+
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>Middle Name</mat-label>
+      <input matInput formControlName="middle_name">
+      <mat-error *ngIf="registrationForm.get('middle_name').hasError('required')"> Middle Name is required </mat-error>
+      <mat-icon matSuffix>local_hospital</mat-icon>
+    </mat-form-field>
+
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>Last Name</mat-label>
+      <input matInput formControlName="last_name">
+      <mat-error *ngIf="registrationForm.get('last_name').hasError('required')"> Last Name is required </mat-error>
+      <mat-icon matSuffix>local_hospital</mat-icon>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="fieldCss">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput placeholder="pat@example.com" [formControl]="registrationForm.get('email')" required>
+      <mat-error *ngIf="registrationForm.get('email').invalid">{{getErrorMessage()}}</mat-error>
+      <mat-icon matSuffix>email</mat-icon>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="fieldCss">
+      <mat-label>Phone number</mat-label>
+      <input matInput type="tel" formControlName="tel" required>
+      <mat-icon matSuffix>phone</mat-icon>
+      <mat-error *ngIf="registrationForm.get('tel').hasError('required')"> Phone Number is required </mat-error>
+    </mat-form-field>
+
+    <!-- <mat-form-field class="fieldCss" appearance="fill">
         <mat-label> Role</mat-label>
         <input matInput formControlName = "role">
         <mat-error *ngIf="registrationForm.get('role').hasError('required')"> Role is required </mat-error>
         <mat-icon matSuffix>person</mat-icon>
       </mat-form-field> -->
 
-      <mat-form-field appearance="fill">
-        <mat-label>Role</mat-label>
-        <mat-select formControlName="role" required>
-          <mat-option value= 1 >Chairman</mat-option>
-          <mat-option value= 2>Assistant Chairman</mat-option>
-          <mat-option value= 3>Secretary</mat-option>
-          <mat-option value= 4>Assistant Secretary</mat-option>
-          <mat-option value= 5>Tresurer</mat-option>
-          <mat-option value= 6>Member</mat-option>
-        </mat-select>
-        <mat-icon matSuffix>person</mat-icon>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Role</mat-label>
+      <mat-select formControlName="role" required>
+        <mat-option value=1>Chairman</mat-option>
+        <mat-option value=2>Assistant Chairman</mat-option>
+        <mat-option value=3>Secretary</mat-option>
+        <mat-option value=4>Assistant Secretary</mat-option>
+        <mat-option value=5>Tresurer</mat-option>
+        <mat-option value=6>Member</mat-option>
+      </mat-select>
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Status</mat-label>
-        <mat-select formControlName="status" required>
-          <mat-option value="Active">Active</mat-option>
-          <mat-option value="Domant">Domant</mat-option>
-          <mat-option value="Dead">Dead</mat-option>
-        </mat-select>
-        <mat-icon matSuffix>person</mat-icon>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Status</mat-label>
+      <mat-select formControlName="status" required>
+        <mat-option value="Active">Active</mat-option>
+        <mat-option value="Domant">Domant</mat-option>
+        <mat-option value="Dead">Dead</mat-option>
+      </mat-select>
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Fee Payement</mat-label>
-        <mat-select formControlName="fee_status" required>
-          <mat-option value="Paid">Paid</mat-option>
-          <mat-option value="Not Paid">Not Paid</mat-option>
-        </mat-select>
-        <mat-icon matSuffix>person</mat-icon>
-      </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Fee Payement</mat-label>
+      <mat-select formControlName="fee_status" required>
+        <mat-option value="Paid">Paid</mat-option>
+        <mat-option value="Not Paid">Not Paid</mat-option>
+      </mat-select>
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label> Club</mat-label>
-        <mat-select  formControlName="club" >
-          <mat-option *ngFor="let club of clubs | async"  [value]="club.id">{{club.name}}</mat-option>
-        </mat-select>
-        <mat-error *ngIf="registrationForm.get('club').hasError('required')"> Club Name is required </mat-error>
-        <mat-icon matSuffix>person</mat-icon>
-      </mat-form-field>
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label> Club</mat-label>
+      <mat-select formControlName="club">
+        <mat-option *ngFor="let club of clubs | async" [value]="club.id">{{club.name}}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="registrationForm.get('club').hasError('required')"> Club Name is required </mat-error>
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label> Password</mat-label>
-        <input type="password" matInput formControlName = "password">
-        <mat-error *ngIf="registrationForm.get('password').hasError('required')"> Password is required </mat-error>
-        <mat-icon matSuffix>password</mat-icon>
-      </mat-form-field>
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label> Password</mat-label>
+      <input type="password" matInput formControlName="password">
+      <mat-error *ngIf="registrationForm.get('password').hasError('required')"> Password is required </mat-error>
+      <mat-icon matSuffix>password</mat-icon>
+    </mat-form-field>
 
-      <mat-form-field class="fieldCss" appearance="fill">
-        <mat-label>Confirm Password</mat-label>
-        <input type="password" matInput formControlName = "confirmPassword">
-        <mat-error *ngIf="registrationForm.get('password').hasError('required')"> Confirm Password is required </mat-error>
-        <!-- <mat-error *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match></mat-error> -->
-        <mat-icon matSuffix>password</mat-icon>
-      </mat-form-field>
+    <mat-form-field class="fieldCss" appearance="fill">
+      <mat-label>Confirm Password</mat-label>
+      <input type="password" matInput formControlName="confirmPassword">
+      <mat-error *ngIf="registrationForm.get('password').hasError('required')"> Confirm Password is required
+      </mat-error>
+      <!-- <mat-error *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match></mat-error> -->
+      <mat-icon matSuffix>password</mat-icon>
+    </mat-form-field>
 
-      
-      </mat-card-content>
-      <mat-card-actions align="start">
-          <button [disabled]="registrationForm.invalid" type="submit" mat-button color="primary">Submit</button>
-          <button mat-button colour="accent">Cancel</button>  
-      </mat-card-actions>
-    </form>      
-</mat-card>
+
+  </mat-card-content>
+  <mat-card-actions align="start">
+    <button [disabled]="registrationForm.invalid" type="submit" mat-button color="primary">Submit</button>
+    <button mat-button colour="accent">Cancel</button>
+  </mat-card-actions>
+</form>
+<br>
+<br>
