--- a/src/app/staff/staffform/staffform.component.scss
+++ b/src/app/staff/staffform/staffform.component.scss
@@ -16,3 +16,11 @@ mat-card {
   padding: 10px;
   
 }
+
+h1 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: rgb(41, 40, 40);
+}
