--- a/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
+++ b/src/app/clubs/selectedclub/clubleaders/clubleaders.component.html
@@ -1,25 +1,8 @@
-<mat-card class="example-card">
-  
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Leadership</mat-card-title>
-    <mat-card-subtitle>Chairman: Simon Msuva</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-        <div>
-      <span>Ass. Chairman</span>
-    </div>
-    <div>
-      <span>Secretary</span>
-    </div>
-    <div>
-      <span>Ass. Secretary</span>
-    </div>
-    <div>
-      <span>Treasurer</span>
-    </div>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button matTooltip="Edit Leadership Board">Edit</button>
-  </mat-card-actions>
-</mat-card>
+<div class="leader-card">
+  <p>LEADERSHIP</p>
+  <p>Chairman: <span>Simon Msuva</span></p>
+  <p>Assistant Chairman: <span>...</span></p>
+  <p>Secretary: <span>...</span></p>
+  <p>Assistant Secretary: <span>...</span></p>
+  <button>Edit</button>
+</div>
