--- a/src/app/clubs/selectedclub/selectedclub.component.html
+++ b/src/app/clubs/selectedclub/selectedclub.component.html
@@ -16,7 +16,7 @@
         <div class="row1">
             <app-clubleaders></app-clubleaders>
         </div>
-        <div class="row2">
+        <div class="row2" hidden>
             <app-clubactivities></app-clubactivities>
         </div>
     </section>
