--- a/src/app/members/selectedmember/selectedmember.component.html
+++ b/src/app/members/selectedmember/selectedmember.component.html
@@ -6,7 +6,7 @@
         </app-memberdetail>
     </div>
     <div>
-        <app-memberactivities>
+        <app-memberactivities hidden>
 
         </app-memberactivities>
     </div>
