--- a/src/app/activities/selectedproject/selectedproject/projectmembers/projectmembers/projectmembers.component.scss
+++ b/src/app/activities/selectedproject/selectedproject/projectmembers/projectmembers/projectmembers.component.scss
@@ -10,3 +10,38 @@ cdk-virtual-scroll-viewport {
   background: whitesmoke;
   cursor: pointer;
 }
+
+p {
+  font-weight: bold;
+  color: grey;
+}
+
+.top {
+  margin-top: 40px;
+}
+
+button {
+  width: 100%;
+  margin-top: 10px;
+  cursor: pointer;
+  padding: 10px 40px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  border: 1.5px solid #7048ec;
+  background-color: #7048ec;
+  color: white;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: transparent;
+  color: #7048ec;
+}
+
+table {
+  margin-top: 20px;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
