--- a/src/app/clubs/selectedclub/clubdetails/clubdetails.component.scss
+++ b/src/app/clubs/selectedclub/clubdetails/clubdetails.component.scss
@@ -1,7 +1,85 @@
-.side { 
-    display: flex; 
-   }
-   
-.column1{ 
-    flex: 50%; 
-} 
+.side {
+  display: flex;
+}
+
+.column1 {
+  flex: 50%;
+}
+
+.club-info {
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.location,
+.supervisor,
+.facility {
+  width: 100%;
+  background-color: #f7f6f9;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.name {
+  width: fit-content;
+  background-color: #f7f6f9;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: large;
+  font-weight: bold;
+  color: grey;
+}
+
+.supervisor {
+  margin: 0 10px;
+}
+
+span {
+  font-weight: bold;
+  color: rgb(32, 32, 32);
+}
+
+p {
+  font-weight: bold;
+  color: grey;
+}
+
+h1 {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: rgb(41, 40, 40);
+}
+
+button {
+    width: 100%;
+  margin-top: 10px;
+  cursor: pointer;
+  padding: 10px 40px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  border: 1.5px solid #7048ec;
+  background-color: transparent;
+  color: #7048ec;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #7048ec;
+  color: white;
+}
+
+table {
+    margin-top: 20px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+  }
