--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -1,50 +1,26 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Member Details</mat-card-title>
-    </mat-card-header>
-    <!-- <img matCardImage src="Card wide image source"> -->
-    <mat-card-content>
-        <div class="details">
-            <div class="sub-details">
-                <div>
-                    <span>First Name: {{memberData?.first_name}}</span>
-                </div>
-                <div>
-                    <span>Middle Name: {{memberData?.middle_name}}</span>
-                </div>
-                <div>
-                    <span>Last Name: {{memberData?.last_name}}</span>
-                </div>
-                <div>
-                    <span>Club Name: {{memberData?.club}}</span>
-                </div>
-                <div>
-                    <span>Date joined: {{memberData?.date_joined}}</span>
-                </div>
-            </div>
-            <div class="sub-details">
-                <div>
-                    <span>Role: {{memberData?.role}}</span>
-                </div>
-                <div>
-                    <span>Status: {{memberData?.status}}</span>
-                </div>
-                <div>
-                    <span>Membership: {{memberData?.fee_status}}</span>
-                </div>
-                <div>
-                    <span>Tel: {{memberData?.tel}}</span>
-                </div>
-                <div>
-                    <span>Email: {{memberData?.email}}</span>
-                </div>
-            </div>
-            <div class="sub-details">
-                <img matCardImage  alt="Photo">
-            </div>
+<h1 style="margin-bottom: 20px;">Members<span style="font-size: medium; font-weight: normal; color: grey;"> /
+        details</span></h1>
+
+<div class="info">
+    <div class="member-info">
+        <div class="member-details">
+            <p>PERSONAL INFO.</p>
+            <p>First Name: <span>{{memberData?.first_name}} </span> </p>
+            <p>Middle Name: <span>{{memberData?.middle_name}} </span> </p>
+            <p>Last Name: <span>{{memberData?.last_name}} </span></ p>
+            <p>Club Name: <span>{{memberData?.club}} </span> </p>
+            <p>Date joined: <span>{{memberData?.date_joined}}</span></p>
         </div>
-    </mat-card-content>
-    <mat-card-actions align="start">
-        <button mat-button (click)="editMember.emit(memberData.id)" >Edit</button>      
-    </mat-card-actions>
-</mat-card>
+    
+        <div class="member-status">
+            <p>SUBSCRIPTION STATUS</p>
+            <p>Role: <span>{{memberData?.role}} </span> </p>
+            <p>Status: <span>{{memberData?.status}} </span> </p>
+            <p>Membership: <span>{{memberData?.fee_status}} </span></ p>
+            <p>Telephone: <span>{{memberData?.tel}} </span> </p>
+            <p>Email: <span>{{memberData?.email}}</span></p>
+        </div>
+    </div>
+    <button (click)="editMember.emit(memberData.id)">Edit</button>
+</div>
+
