--- a/src/app/staff/selectedstaff/selectedstaff.component.html
+++ b/src/app/staff/selectedstaff/selectedstaff.component.html
@@ -1,45 +1,22 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Staff Details</mat-card-title>
-    </mat-card-header>
-    <!-- <img matCardImage src="Card wide image source"> -->
-    <mat-card-content>
-        <div class="details">
-            <div class="sub-details">
-                <div>
-                    <span>First Name: {{staffData?.first_name}}</span>
-                </div>
-                <div>
-                    <span>Middle Name: {{staffData?.middle_name}}</span>
-                </div>
-                <div>
-                    <span>Last Name: {{staffData?.last_name}}</span>
-                </div>
-                <div>
-                    <span>Position: {{staffData?.position}}</span>
-                </div>
-                <div>
-                    <span>Date joined: {{staffData?.date_joined}}</span>
-                </div>
-            </div>
-            <div class="sub-details">
-                <div>
-                    <span>Status: {{staffData?.status}}</span>
-                </div>
-                <div>
-                    <span>Tel: {{staffData?.tel}}</span>
-                </div>
-                <div>
-                    <span>Email: {{staffData?.email}}</span>
-                </div>
-            </div>
-            <div class="sub-details">
-                <img matCardImage  alt="Photo of a Shiba Inu">
-            </div>
+<h1 style="margin-bottom: 20px;">Staff<span style="font-size: medium; font-weight: normal; color: grey;"> /
+        details</span></h1>
+
+<div class="info">
+    <div class="staff-info">
+        <div class="staff-details">
+            <p>PERSONAL INFO.</p>
+            <p>First Name: <span>{{staffData?.first_name}} </span> </p>
+            <p>Middle Name: <span>{{staffData?.middle_name}} </span> </p>
+            <p>Last Name: <span>{{staffData?.last_name}} </span></ p>
+            <p>Position: <span>{{staffData?.position}} </span> </p>
+            <p>Date joined: <span>{{staffData?.date_joined}}</span></p>
         </div>
-    </mat-card-content>
-    <mat-card-actions align="start">
-        <button mat-button (click)="editStaff(staffData.id)">Edit</button>
-        
-    </mat-card-actions>
-</mat-card>
+        <div class="staff-status">
+            <p>SUBSCRIPTION STATUS</p>
+            <p>Status: <span>{{staffData?.status}} </span> </p>
+            <p>Telephone: <span>{{staffData?.tel}} </span> </p>
+            <p>Email: <span>{{staffData?.email}}</span></p>
+        </div>
+    </div>
+    <button (click)="editStaff(staffData.id)">Edit</button>
+</div>
