--- a/src/app/staff/selectedstaff/selectedstaff.component.scss
+++ b/src/app/staff/selectedstaff/selectedstaff.component.scss
@@ -8,3 +8,64 @@
     padding: 5px;
     
 }
+
+h1 {
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    color: rgb(41, 40, 40);
+  }
+
+  .staff-info {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: start;
+  }
+
+  .info {
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+
+.staff-details, .staff-status {
+    background-color: #f7f6f9;
+    border-radius: 10px;
+    padding: 20px;
+  }
+
+  .staff-details {
+      margin-right: 20px;
+  }
+
+  span {
+    font-weight: bold;
+    color: rgb(32, 32, 32);
+  }
+  
+  p {
+    font-weight: bold;
+    color: grey;
+  }
+
+  button {
+  margin-top: 20px;
+  cursor: pointer;
+  padding: 10px 50px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  border: 1.5px solid #7048ec;
+  background-color: transparent;
+  color: #7048ec;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+button:hover {
+  background-color: #7048ec;
+  color: white;
+}
