--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -8,16 +8,16 @@
             <p>First Name: <span>{{memberData?.first_name}} </span> </p>
             <p>Middle Name: <span>{{memberData?.middle_name}} </span> </p>
             <p>Last Name: <span>{{memberData?.last_name}} </span></ p>
+            <p>Sex: <span>{{memberData.sex}} </span> </p>
             <p>Club Name: <span>{{memberData?.club}} </span> </p>
-            <p>Date joined: <span>{{memberData?.date_joined}}</span></p>
         </div>
     
         <div class="member-status">
             <p>SUBSCRIPTION STATUS</p>
             <p>Role: <span>{{memberData?.role}} </span> </p>
             <p>Status: <span>{{memberData?.status}} </span> </p>
-            <p>Membership: <span>{{memberData?.fee_status}} </span></ p>
-            <p>Telephone: <span>{{memberData?.tel}} </span> </p>
+            <p>Date Joined <span>{{memberData?.date_joined}} </span> </ p>
+            <p>Telephone: <span>{{memberData?.phone}} </span> </p>
             <p>Email: <span>{{memberData?.email}}</span></p>
         </div>
     </div>
