--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -61,16 +61,10 @@
         <td mat-cell *matCellDef="let row"> {{row.role}} </td>
       </ng-container>
 
-      <!-- Tel Column -->
-      <ng-container matColumnDef="tel">
+      <!-- Sex Column -->
+      <ng-container matColumnDef="sex">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone </th>
-        <td mat-cell *matCellDef="let row"> {{row.tel}} </td>
-      </ng-container>
-
-      <!-- Email Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email </th>
-        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.sex}} </td>
       </ng-container>
 
       <!--Status Column -->
@@ -79,12 +73,7 @@
         <td mat-cell *matCellDef="let row"> {{row.status}} </td>
       </ng-container>
 
-      <!-- Fee status Column -->
-      <ng-container matColumnDef="fee_status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Membership Fee </th>
-        <td mat-cell *matCellDef="let row"> {{row.fee_status}} </td>
-      </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectedMember(row.id)"></tr>
   
