--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -63,7 +63,7 @@
 
       <!-- Sex Column -->
       <ng-container matColumnDef="sex">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sex </th>
         <td mat-cell *matCellDef="let row"> {{row.sex}} </td>
       </ng-container>
 
