--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -8,7 +8,7 @@
             <p>First Name: <span>{{memberData?.first_name}} </span> </p>
             <p>Middle Name: <span>{{memberData?.middle_name}} </span> </p>
             <p>Last Name: <span>{{memberData?.last_name}} </span></ p>
-            <p>Sex: <span>{{memberData.sex}} </span> </p>
+            <p>Sex: <span>{{memberData?.sex}} </span> </p>
             <p>Club Name: <span>{{memberData?.club}} </span> </p>
         </div>
     
