--- a/src/app/activities/selectedproject/selectedproject/projectdetails/projectdetails/projectdetails.component.html
+++ b/src/app/activities/selectedproject/selectedproject/projectdetails/projectdetails/projectdetails.component.html
@@ -2,6 +2,7 @@
         details</span></h1>
 <p>Project name: <span>{{projectData?.name}}</span></p>
 <p>Description: <span>{{projectData?.description}} </span> </p>
+<p>Funder: <span>{{projectData?.funder}} </span> </p>
 <p>Start Date: <span>{{projectData?.start_date}} </span> </p>
 <p>End Date: <span>{{projectData?.end_date}} </span></p>
 <button (click)="editProject.emit(projectData.id)">Edit</button>
