--- a/src/app/members/selectedmember/memberdetail/memberdetail.component.html
+++ b/src/app/members/selectedmember/memberdetail/memberdetail.component.html
@@ -9,12 +9,12 @@
             <p>Middle Name: <span>{{memberData?.middle_name}} </span> </p>
             <p>Last Name: <span>{{memberData?.last_name}} </span></ p>
             <p>Sex: <span>{{memberData?.sex}} </span> </p>
-            <p>Club Name: <span>{{memberData?.club}} </span> </p>
+            <p>Club Name: <span>{{memberData?.club_name}} </span> </p>
         </div>
     
         <div class="member-status">
             <p>SUBSCRIPTION STATUS</p>
-            <p>Role: <span>{{memberData?.role}} </span> </p>
+            <p>Role: <span>{{memberData?.role_name}} </span> </p>
             <p>Status: <span>{{memberData?.status}} </span> </p>
             <p>Date Joined <span>{{memberData?.date_joined}} </span> </ p>
             <p>Telephone: <span>{{memberData?.phone}} </span> </p>
