--- a/src/app/staff/selectedstaff/selectedstaff.component.html
+++ b/src/app/staff/selectedstaff/selectedstaff.component.html
@@ -8,13 +8,13 @@
             <p>First Name: <span>{{staffData?.first_name}} </span> </p>
             <p>Middle Name: <span>{{staffData?.middle_name}} </span> </p>
             <p>Last Name: <span>{{staffData?.last_name}} </span></ p>
-            <p>Position: <span>{{staffData?.position}} </span> </p>
+            <p>Sex: <span>{{staffData?.sex}} </span> </p>
             <p>Date joined: <span>{{staffData?.date_joined}}</span></p>
-        </div>
-        <div class="staff-status">
+            </div>
+            <div class="staff-status">
             <p>SUBSCRIPTION STATUS</p>
-            <p>Status: <span>{{staffData?.status}} </span> </p>
-            <p>Telephone: <span>{{staffData?.tel}} </span> </p>
+            <p>Position: <span>{{staffData?.role_name}} </span> </p>
+            <p>Telephone: <span>{{staffData?.phone}} </span> </p>
             <p>Email: <span>{{staffData?.email}}</span></p>
         </div>
     </div>
