--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -40,8 +40,14 @@
 
     <!-- Description Column -->
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> description </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
       <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+    </ng-container>
+
+    <!-- Funder Column -->
+    <ng-container matColumnDef="funder">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Funder </th>
+      <td mat-cell *matCellDef="let row"> {{row.funder}} </td>
     </ng-container>
 
     <!-- start_date Column -->
