--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -40,7 +40,7 @@
       <!-- Facility Column -->
       <ng-container matColumnDef="facility">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Facility </th>
-        <td mat-cell *matCellDef="let row"> {{row.health_facility}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.facility}} </td>
       </ng-container>
   
       <!-- Zone Column -->
