--- a/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
+++ b/src/app/clubs/selectedclub/clubdetails/clubdetails.component.html
@@ -10,22 +10,22 @@
         <p>Zone: <span>{{clubData?.zone}} </span> </p>
         <p>Region: <span>{{clubData?.region}} </span> </p>
         <p>District: <span>{{clubData?.district}} </span></ p>
-        <p>Sub-District: <span>{{clubData?.sub_district}} </span> </p>
+        <p>Sub-District: <span>{{clubData?.subdistrict}} </span> </p>
         <p>Ward: <span>{{clubData?.ward}}</span></p>
-        <p>Street: <span>{{clubData?.street}}</span></p>
+        <p>Street: <span>{{clubData?.street_or_village}}</span></p>
     </div>
 
     <div class="supervisor">
         <p>SUPERVISOR</p>
         <p>Name: <span> {{supervisorData?.first_name}} {{supervisorData?.last_name}} </span></p>
         <p>Title: <span> {{supervisorData?.position}}</span></p>
-        <p>Tel: <span> {{supervisorData?.tel}}</span></p>
+        <p>Tel: <span> {{supervisorData?.phone}}</span></p>
         <p>Email: <span> {{supervisorData?.email}}</span></p>
     </div>
 
     <div class="facility">
         <p>FACILITY</p>
-        <p>Health Facility: <span>{{clubData?.health_facility}}</span></p>
+        <p>Health Facility: <span>{{clubData?.health_facility_name}}</span></p>
         <p>Tel: <span>{{clubData?.phone}}</span></p>
         <p>Email: <span>{{clubData?.email}}</span></p>
         <p>Office: <span>{{clubData?.office}}</span></p>
