--- a/src/app/members/memberform/memberform.component.html
+++ b/src/app/members/memberform/memberform.component.html
@@ -54,7 +54,7 @@
 
     <mat-form-field class="fieldCss" appearance="fill">
       <mat-label> Role</mat-label>
-      <mat-select formControlName="role">
+      <mat-select [(value)]="selectedRole" formControlName="role">
         <mat-option *ngFor="let role of roles | async" [value]="role.id">{{ role.name }}</mat-option>
       </mat-select>
       <mat-error *ngIf="registrationForm.get('role').hasError('required')"> Role is required
@@ -73,7 +73,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-      <mat-label>Is Post TB</mat-label>
+      <mat-label>Is Post TB?</mat-label>
       <mat-select formControlName="is_post_tb" required>
         <mat-option value="True">Yes</mat-option>
         <mat-option value="False">No</mat-option>
