--- a/src/app/staff/staff.component.html
+++ b/src/app/staff/staff.component.html
@@ -49,9 +49,9 @@
       </ng-container>
 
       <!-- Tel Column -->
-      <ng-container matColumnDef="tel">
+      <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone </th>
-        <td mat-cell *matCellDef="let row"> {{row.tel}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
       </ng-container>
 
       <!-- Email Column -->
@@ -67,10 +67,10 @@
       </ng-container>
 
       <!--Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
-        <td mat-cell *matCellDef="let row"> {{row.status}} </td>
-      </ng-container>
+     <ng-container matColumnDef="sex">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sex</th>
+        <td mat-cell *matCellDef="let row"> {{row.sex}} </td>
+      </ng-container> 
 
 
   
