--- a/src/app/staff/staffform/staffform.component.html
+++ b/src/app/staff/staffform/staffform.component.html
@@ -27,6 +27,15 @@
       <mat-icon matSuffix>local_hospital</mat-icon>
     </mat-form-field>
 
+    <mat-form-field appearance="fill">
+      <mat-label>Sex</mat-label>
+      <mat-select formControlName="sex" required>
+        <mat-option value="1">Male</mat-option>
+        <mat-option value="2">Female</mat-option>
+      </mat-select>
+      <mat-icon matSuffix>person</mat-icon>
+    </mat-form-field>
+    
     <mat-form-field appearance="fill" class="fieldCss">
       <mat-label>Email</mat-label>
       <input matInput placeholder="pat@example.com" [formControl]="registrationForm.get('email')" required>
@@ -36,19 +45,22 @@
 
     <mat-form-field appearance="fill" class="fieldCss">
       <mat-label>Phone number</mat-label>
-      <input matInput type="tel" formControlName="tel" required>
+      <input matInput type="tel" formControlName="phone" required>
       <mat-icon matSuffix>phone</mat-icon>
-      <mat-error *ngIf="registrationForm.get('tel').hasError('required')"> Phone Number is required </mat-error>
+      <mat-error *ngIf="registrationForm.get('phone').hasError('required')"> Phone Number is required </mat-error>
     </mat-form-field>
 
     <mat-form-field class="fieldCss" appearance="fill">
-      <mat-label>Position</mat-label>
-      <input matInput formControlName="position">
-      <mat-error *ngIf="registrationForm.get('position').hasError('required')"> Position is required </mat-error>
+      <mat-label> Position</mat-label>
+      <mat-select [(value)]="selectedRole" formControlName="role">
+        <mat-option *ngFor="let role of roles | async" [value]="role.id">{{ role.name }}</mat-option>
+      </mat-select>
+      <mat-error *ngIf="registrationForm.get('role').hasError('required')"> Role is required
+      </mat-error>
       <mat-icon matSuffix>person</mat-icon>
-    </mat-form-field>
+    </mat-form-field> 
 
-    <mat-form-field appearance="fill">
+    <!-- <mat-form-field appearance="fill">
       <mat-label>Status</mat-label>
       <mat-select formControlName="status" required>
         <mat-option value="Active">Active</mat-option>
@@ -56,7 +68,7 @@
         <mat-option value="Dead">Dead</mat-option>
       </mat-select>
       <mat-icon matSuffix>person</mat-icon>
-    </mat-form-field>
+    </mat-form-field> -->
 
     <mat-form-field class="fieldCss" appearance="fill">
       <mat-label> Password</mat-label>
