--- a/src/app/clubs/selectedclub/clubleaders/clubleaders.component.scss
+++ b/src/app/clubs/selectedclub/clubleaders/clubleaders.component.scss
@@ -2,7 +2,7 @@
   height: 100px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
-  background-image: url("src/assets/img/avatar.JPG");
+  background-image: url("/src/assets/img/avatar.JPG");
   background-size: cover;
 }
 
